# rustDirectx

./: Cargo.toml  README.md
Asset/: TestShader.hlsl
src/: Cp_directx12.rs  ShapelVRM.rs  gltfimporttest.rs  main.rs
src/Asset/: TestShader.hlsl
src/CapriCore/: cp_directx12.rs  mod.rs
src/Cp_directx12/: cp_default_value.rs
